--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.5",
     "next": "^15.2.4",
@@ -26,6 +27,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "postcss": "^8.5.3",
+    "prisma": "^6.6.0",
     "tailwindcss": "^4.0.15",
     "typescript": "^5"
   }
