--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sync:reviews": "ts-node scripts/syncGoogleReviews.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
     "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.6.5",
     "next": "^15.2.4",
     "react": "^19.0.0",
@@ -29,6 +31,7 @@
     "postcss": "^8.5.3",
     "prisma": "^6.6.0",
     "tailwindcss": "^4.0.15",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
