--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fontsource/plus-jakarta-sans": "^5.2.5",
     "@prisma/client": "^6.6.0",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.6.5",
     "next": "^15.2.4",
