--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "sync:reviews": "ts-node scripts/syncGoogleReviews.ts"
+    "sync:reviews": "ts-node scripts/syncGoogleReviews.ts",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@fontsource/plus-jakarta-sans": "^5.2.5",
     "@googlemaps/js-api-loader": "^1.16.10",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "6.6.0",
     "@react-google-maps/api": "^2.20.7",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -36,7 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "postcss": "^8.5.3",
-    "prisma": "^6.6.0",
+    "prisma": "6.6.0",
     "tailwindcss": "^4.0.15",
     "ts-node": "^10.9.2",
     "typescript": "^5"
