--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# --- Prisma (ignorujemy lokalne pliki jeśli nie używasz teraz) ---
+prisma/
+app/libs/prismadb.ts
+app/api/google-reviews/route.ts
