--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@googlemaps/js-api-loader": "^1.16.10",
     "@prisma/client": "6.6.0",
     "@react-google-maps/api": "^2.20.7",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
